# libwin-port - C library to bring some useful linux api to windows
# 
# Copyright (C) 2015 yquant.com
# 
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

libwin_port_sources = [
  "include/dlfcn.h",
  "include/getopt.h",
  "dlfcn.c",
  "getopt.c",
]

config("libwin_port_public_config") {
  include_dirs = [ "include" ]
}

config("libwin_port_config") {
  include_dirs = [
    "include",
  ]
  
  cflags = [
    "/wd4054",
  ]
}  

static_library("libwin_port_static") {
  sources = libwin_port_sources

  configs += [
    ":libwin_port_config",
  ]
  
  public_configs = [
    ":libwin_port_public_config",
  ]
}

config("libwin_port_shared_public_config") {
  defines = [
    "USING_LIBWIN_PORT_SHARED=1",
  ]
}

shared_library("libwin_port_shared") {
  output_name = "libwin-port"
  
  sources = libwin_port_sources

  defines = [
    "LIBWIN_PORT_IMPLEMENTATION=1"
  ]

  configs += [
    ":libwin_port_config",
  ]

  public_configs = [
    ":libwin_port_public_config",
    ":libwin_port_shared_public_config",
  ]
}
